[package]
name = "toy_comp"
version = "0.2.0"
edition = "2024"
build = "build.rs"

[dependencies]
ordered-float = { version = "5.1.0", features = ["serde"] }
thiserror = "2.0.17"
inkwell = { version = "0.7.0", features = ["llvm21-1"] }
llvm-sys = {version = "211.0", features = ["prefer-static"]}
colored = "3.0.0"
chrono = "0.4.42"
itertools = "0.14.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
[build-dependencies]
cmake = "0.1.54"
bindgen = "0.70"


[features]
debug = []
